User/k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
